# Bookkeeping

./: .dockerignore  .eslintrc  .gitignore  .nycrc  .sequelizerc  .validaterc  CHANGELOG.md  Dockerfile  README.md  codecov.yml  destroy-docker.sh  docker-compose.coverage.yml  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.test-parallel-base.yml  docker-compose.test-parallel-ci.yml  docker-compose.test-parallel-local.yml  docker-compose.test-parallel.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  parallel-test.sh  toto.sh  vite.config.js  vite.express.js
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.scannerwork/: report-task.txt
application/: .dockerignore  .eslintrc  .nycrc  package.json
backend/: Dockerfile  package-lock.json  package.json
cpp-api-client/: .gitignore  CMakeLists.txt  Makefile  README.md  doxygenTemplate  openapi-source.yaml
cpp-api-client/cmake/: BookkeepingApiCppConfig.cmake.in
cpp-api-client/documentation/html/: BookkeepingInterface_8h.html  BookkeepingInterface_8h__incl.map  BookkeepingInterface_8h__incl.md5  BookkeepingInterface_8h_source.html  Example_8cpp.html  Example_8cpp__incl.map  Example_8cpp__incl.md5  README_8md.html  annotated.html  classbookkeeping_1_1BookkeepingInterface-members.html  classbookkeeping_1_1BookkeepingInterface.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  menudata.js  namespacebookkeeping.html  namespaces.html
cpp-api-client/documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  searchdata.js
cpp-api-client/src/: BookkeepingApi.cpp  BookkeepingApi.h  BookkeepingFactory.cpp  BookkeepingFactory.h  BookkeepingInterface.h  CreateLogParameters.h  CreateRunParameters.h  Example.cpp  GetLogsParameters.h  GetRunsParameters.h  Log.h  LogOrigin.h  LogSubtype.h  OrderDirection.h  Run.h  RunQuality.h  RunType.h
cpp-api-client/src/cpprest-client/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  README.md
cpp-api-client/src/cpprest-client/.openapi-generator/: FILES
cpp-api-client/src/cpprest-client/api/: AttachmentApi.cpp  AttachmentApi.h  DefaultApi.cpp  DefaultApi.h  FlpApi.cpp  FlpApi.h  LogApi.cpp  LogApi.h  RunApi.cpp  RunApi.h  SubsystemApi.cpp  SubsystemApi.h  TagApi.cpp  TagApi.h
cpp-api-client/src/cpprest-client/model/: ApiInformation.cpp  ApiInformation.h  ArrayOfAttachmentsResponse.cpp  ArrayOfAttachmentsResponse.h  ArrayOfFlpsResponse.cpp  ArrayOfFlpsResponse.h  ArrayOfFlpsResponseMeta.cpp  ArrayOfFlpsResponseMeta.h  ArrayOfLogsResponse.cpp  ArrayOfLogsResponse.h  ArrayOfLogsResponseMeta.cpp  ArrayOfLogsResponseMeta.h  ArrayOfRunsResponse.cpp  ArrayOfRunsResponse.h  ArrayOfRunsResponseMeta.cpp  ArrayOfRunsResponseMeta.h  ArrayOfSubsystemsResponse.cpp  ArrayOfSubsystemsResponse.h  ArrayOfSubsystemsResponseMeta.cpp  ArrayOfSubsystemsResponseMeta.h  ArrayOfTagsResponse.cpp  ArrayOfTagsResponse.h  Attachment.cpp  Attachment.h  AttachmentResponse.cpp  AttachmentResponse.h  CreateAttachments.cpp  CreateAttachments.h  CreateFlp.cpp  CreateFlp.h  CreateLog.cpp  CreateLog.h  CreateSubsystem.cpp  CreateSubsystem.h  CreateTag.cpp  CreateTag.h  DeployInformation.cpp  DeployInformation.h  Entity.cpp  Entity.h  (+74 more)
cpp-api-client/test-api/: CMakeLists.txt  Example.cpp
cxx-client/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  client.cxx
cxx-client/cmake/: BookkeepingApiConfig.cmake.in  BookkeepingProtoApiConfig.cmake.in
cxx-client/example/: dummy-configuration.json  exampleProtoServices.cxx  exampleSpecificServices.cxx  main.cxx
cxx-client/include/BookkeepingApi/: BkpClient.h  BkpClientFactory.h  BkpProtoClient.h  BkpProtoClientFactory.h  BookkeepingClient.h  BookkeepingClientFactory.h  BookkeepingFactory.h  BookkeepingInterface.h  CtpTriggerCountersServiceClient.h  DplProcessExecutionClient.h  DplProcessExecutionProtoClient.h  DplProcessType.h  FlpServiceClient.h  QcFlag.h  QcFlagServiceClient.h  RunProtoClient.h  RunServiceClient.h  TriggerCountersServiceClient.h
cxx-client/src/: BkpClientFactory.cxx  BkpProtoClientFactory.cxx  BookkeepingClientFactory.cxx  BookkeepingFactory.cxx  BookkeepingImpl.cxx  BookkeepingImpl.h  dummy-configuration.json  runner.cxx
cxx-client/src/grpc/: GrpcBkpClient.cxx  GrpcBkpClient.h  GrpcBkpProtoClient.cxx  GrpcBkpProtoClient.h  GrpcBookkeepingClient.cxx  GrpcBookkeepingClient.h
cxx-client/src/grpc/services/: GrpcCtpTriggerCountersServiceClient.cxx  GrpcCtpTriggerCountersServiceClient.h  GrpcDplProcessExecutionClient.cxx  GrpcDplProcessExecutionClient.h  GrpcDplProcessExecutionProtoClient.cxx  GrpcDplProcessExecutionProtoClient.h  GrpcFlpServiceClient.cxx  GrpcFlpServiceClient.h  GrpcQcFlagServiceClient.cpp  GrpcQcFlagServiceClient.cxx  GrpcQcFlagServiceClient.h  GrpcRunProtoClient.cxx  GrpcRunProtoClient.h  GrpcRunServiceClient.cxx  GrpcRunServiceClient.h  GrpcTriggerCountersServiceClient.cxx  GrpcTriggerCountersServiceClient.h
database/: .gitignore  CHANGELOG.md
docker/: .gitignore
docs/: ARCHITECTURE.md  BOOKKEEPING-API.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  OPENAPI.md  RUN_DEFINITIONS.md  backend-architecture.md  data-model.md  get-started.md  grpc.md  parallel-testing.md  setup.md
frontend/: Dockerfile  package-lock.json  package.json
go-api-client/: Example.go  README.md  go.mod  go.sum  openapi-source.yaml
lib/: application.js  main.js  ser.js  ser.mjs.js  server.js  vite.express.js
nginx/: Dockerfile  nginx.conf  nginx.dev.conf
proto/: common.proto  environment.proto  (+8 more)
(+3083 files in other folders)
